[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "trajectopy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["trajectopy"]

[project]
name = "trajectopy"
requires-python = ">=3.9"
description = "Trajectory Evaluation in Python"
authors = [
  {name = "Gereon Tombrink", email = "tombrink@igg.uni-bonn.de"}
]
maintainers = [
  {name = "Gereon Tombrink", email = "tombrink@igg.uni-bonn.de"}
]
license = {text = "GPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]
keywords = ["trajectory", "evaluation", "alignment", "similarity", "leverarm", "epsg", "robotics"]
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "autograd>=1.8.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "pyproj>=3.6.1",
    "rich>=14.0.0",
    "rosbags>=0.9.23",
    "scipy>=1.13.1",
]


[project.optional-dependencies]
gui = ["PyQt6"]

[project.urls]
Homepage = "https://gereon-t.github.io/trajectopy/"
Documentation = "https://gereon-t.github.io/trajectopy/"
Repository = "https://github.com/gereon-t/trajectopy"
"Bug Tracker" = "https://github.com/gereon-t/trajectopy/issues"

[project.scripts]
trajectopy = "trajectopy.__main__:main"

[dependency-groups]
dev = [
    "lazydocs>=0.4.8",
    "mkdocs-material>=9.6.14",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "python-markdown-math>=0.9",
]
